--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="card">
       <img
         class="image"
-        src="/images/cactus_img.jpg"
+        src="images/cactus_img.jpg"
         alt="image of a cactus in a pot"
       />
 
